maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: not found: value &&
				case (true && estFaceMur() == true) => gauche(); gauche(); avance()
                                           ^